Now displays the input on top of the page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     <h1>Welcome{{ name }}!</h1>
 </head>
 <body>
