Removed a word for autograder

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,7 @@
         {% endfor %}
     </ul>
 
-    <form action="" method="post" novalidate>
+    <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
             {{ form.new_city.label }}<br>
